--- a/twitter/public/index.html
+++ b/twitter/public/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-   
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <title>Twitter APIs</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app.
+    	<noscript> git hub push test</noscript>
     <div id="root"></div>
     
   </body>
